@@ -16,17 +16,17 @@ namespace As_Far
         GraphicsDeviceManager graphics;
         SpriteBatch spriteBatch;
 
-        // additional attributes
+        // Menu Attributes
         private bool pause = false;
         Texture2D sm;
         Texture2D statsMenu;
         Texture2D itemsMenu;
         Vector2 vec;
 
-        //Buttons for start menu
-        Rectangle resume = new Rectangle(0, 0, 100, 65);
-        Rectangle stats = new Rectangle(200, 0, 100, 65);
-        Rectangle items = new Rectangle(400, 0, 100, 65); 
+        Texture2D statsButton;
+        Texture2D itemsButton;
+        Texture2D resumeButton;
+          
 
         //Attributes to resize window
         int winX = 1000;
@@ -36,8 +36,9 @@ namespace As_Far
         Texture2D protag;
         Vector2 playerPos;
 
-        //Cursor
+        //Mouse object
         MouseState m = Mouse.GetState();
+
 
         public Game1()
         {
@@ -52,6 +53,7 @@ namespace As_Far
 
         }
 
+
         /// <summary>
         /// Allows the game to perform any initialization it needs to before starting to run.
         /// This is where it can query for any required services and load any non-graphic
@@ -63,13 +65,12 @@ namespace As_Far
             // TODO: Add your initialization logic here
             vec = new Vector2(-500, -100);
 
-            //Button assets for pause menu
-
-
+            
             //Load all of the protag images into an array
 
             base.Initialize();
         }
+
 
         /// <summary>
         /// LoadContent will be called once per game and is the place to load
@@ -81,22 +82,24 @@ namespace As_Far
             spriteBatch = new SpriteBatch(GraphicsDevice);
 
             // TODO: use this.Content to load your game content here
+
+            // Loading in the protagonist sprite
             protag = Content.Load<Texture2D>("Characters\\Protag\\Protag.png");
-
-
-
+            
             // Loading in the start menu
             sm = Content.Load<Texture2D>("UI\\StartMenu.png");
 
             // Loading in the stats menu
             statsMenu = Content.Load<Texture2D>("UI\\Stats Menu.png");
 
-            //Loading in the items menu
+            // Loading in the items menu
             itemsMenu = Content.Load<Texture2D>("UI\\Items Menu.png");
 
-
+            //Loading in the Stats button from the pause menu
+            statsButton = Content.Load<Texture2D>("UI\\Stats Button.png");
 
         }
+
 
         /// <summary>
         /// UnloadContent will be called once per game and is the place to unload
@@ -106,6 +109,7 @@ namespace As_Far
         {
             // TODO: Unload any non ContentManager content here
         }
+
 
         /// <summary>
         /// Allows the game to run logic such as updating the world,
@@ -121,8 +125,6 @@ namespace As_Far
 
             //Gets current state of mouse
             MouseState m = Mouse.GetState();
-
-            // (*TEMPORARY*) Making the menu move so you can see the whole thing
 
             Pause();
             Move();
@@ -152,31 +154,20 @@ namespace As_Far
             {
                 //Draw pause menu GUI
                 spriteBatch.Draw(sm, vec, Color.White);
+
+                //Draw menu buttons
+                Button stats = new Button("Stats", Color.Transparent, statsButton, -500, -500);
+                Button items = new Button("Items", Color.Transparent, itemsButton, -500, -700);
+                Button resume = new Button("Resume", Color.Transparent, resumeButton, -500, -900);
                 //Show the cursor
                 this.IsMouseVisible = true;
             }
-
-            //If the stats "button" is clicked
-            if(m.Position.X <= stats.X && m.Position.Y <= stats.Y)
-            {
-                if(m.LeftButton(IsActive) == true)
-                {
-
-                }
-            }
-
-            //If the items "button" is clicked
-            //if()
-            {
-
-            }
-            
-
-
             spriteBatch.End();
 
             base.Draw(gameTime);
         }
+        
+
         //Method to initialize the pause menu
         public void Pause()
         {
@@ -185,6 +176,7 @@ namespace As_Far
             if (ks.IsKeyDown(Keys.P)) pause = true;
             //Player will hit the resume button to continue playing.
         }
+
 
         public void Move()
         {
